--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "manage-expenses",
   "version": "0.1.0",
+  "homepage": "https://stefaniagalazzo.github.io/manage-expenses-CRA-exercise/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
